--- a/src/app/pages/press/press.component.html
+++ b/src/app/pages/press/press.component.html
@@ -77,6 +77,55 @@
             </div>
            
             <!-- =========================================================== -->
+            <owl-carousel-o [options]="customOptions">
+                <ng-template class="example-collection-grid" carouselSlide>
+                    <div class="example-collection-cell">
+                    <div class="slide stageverse-1">
+    
+                            <div class="stageverse-content ">
+                                <h4 class="stage-heading">Customizable Avatars</h4>
+                                <p class="stageverse-text stage-paragraph">Flex your style with full-body, expressive avatars.</p>
+    
+                            </div>
+    
+                    </div>
+                </div>
+                </ng-template>
+                <ng-template class="example-collection-grid" carouselSlide>
+                    <div class="example-collection-cell">
+                        <div class="slide stageverse-2">
+                        <div class="stageverse-content ">
+                            <h4 class="stage-heading">Friends & Parties</h4>
+                            <p class="stageverse-text stage-paragraph">Meet up and explore together. Can we add one more line here?</p>
+    
+                        </div>
+                        </div>
+                </div>
+                </ng-template>
+                <ng-template class="example-collection-grid" carouselSlide>
+                    <div class="example-collection-cell">
+                    <div class="slide stageverse-3">
+                        <div class="stageverse-content ">
+                            <h4 class="stage-heading">Spatial Voice Chat</h4>
+                            <p class="stageverse-text stage-paragraph">Talk and connect with others in beautifully-designed 3D spaces</p>
+    
+                        </div>
+                    </div>
+                </div>
+                </ng-template>
+                <ng-template class="example-collection-grid" carouselSlide>
+                    <div class="example-collection-cell">
+                    <div class="slide stageverse-4">
+                        <div class="stageverse-content ">
+                            <h4 class="stage-heading">Virtual Goods</h4>
+                            <p class="stageverse-text stage-paragraph">Play and express yourself with interactive toys and collectible items</p>
+    
+                        </div>
+                    </div>
+                </div>
+                </ng-template>
+    
+            </owl-carousel-o>
             <div>
                 <div class="title-container">
                     <h1 class="title-sm">DOWNLOAD</h1>
