--- a/src/app/pages/muse/components/muse/muse.component.scss
+++ b/src/app/pages/muse/components/muse/muse.component.scss
@@ -79,7 +79,7 @@
     width: 34.4vw;
 }
 .white-btn{
-    padding: 15px 35px;
+    padding: 15px 50px;
     margin-top: 40px;
     background-color: #ffffff;
     font-size: 22px;
@@ -87,8 +87,13 @@
     color: #0A091A;
 }
 .white-btn:hover{
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0.08)), #0A091A;
-    color: #ffffff;
+    background: linear-gradient(0deg, rgba(123, 97, 255, 0.2), rgba(123, 97, 255, 0.2)), #FFFFFF;
+    color: #0A091A;
+}
+.btn-arrow{
+    position: relative;
+    top: 5px;
+    left: 33px;
 }
 .flex-1{
     flex: 1;
@@ -126,12 +131,38 @@
 
 }
 .gallery-image{
+    height: 70vh;
     background-image: url('/assets/images/ui-assets/women.png');
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     flex: 1;
     margin: 10px;
+}
+.faq-box-padding{
+    padding: 0vh 16.5vh 0vh 6.5vh;
+}
+.faq-heading{
+    font-weight: bold;
+    font-size: 28.5px;
+    line-height: 120%;
+}
+.faq-text{
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 130%;
+    letter-spacing: -0.02em;
+    opacity: 0.7;
+}
+::ng-deep .mat-expansion-panel-header{
+    padding: 0px 0px !important; 
+    border-radius: 0px !important;
+    border-top: 1px solid rgba(255, 255, 255, 0.45);
+    height: 86px !important;
+}
+::ng-deep .mat-expansion-panel-body {
+    padding: 25px 0px 25px !important;
+    margin-bottom: 2vh !important;
 }
 .h-3{
     font-style: normal;
@@ -152,11 +183,15 @@
     font-feature-settings: 'ss02' on;
     color: #FFFFFF;
 }
-.gallery-text-box{
+.text-box-gradient{
+    background:linear-gradient(0deg, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.265625) 79.17%, rgba(0, 0, 0, 0) 100%); 
+    height: 17vh;
     position: relative;
+    top: 53vh;
+}
+.gallery-text-box{
     width: 80%;
     margin-left: 3vw;
-    top: 54vh;
 }
 .title-container{
     width: 94%;
@@ -196,8 +231,7 @@
     padding: 10px 31px;
 }
 .left-image-text-btn:hover{
-    background: linear-gradient(0deg, rgba(123, 97, 255, 0.2), rgba(123, 97, 255, 0.2)), #FFFFFF;
-    color: #0A091A;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.08), rgba(255, 255, 255, 0.08)), #0A091A;
 }
 .left-image-text-btn img{
     position: relative;
@@ -461,7 +495,9 @@
     margin-left: auto;
     margin-right: auto;
 }
-// ==================================================mobile view css=================================================>>>>>>>>>>>>>>
+// ================================================================================================================================
+//                                                  MOBILE VIEWS CSS START
+// ================================================================================================================================
 // On screens that are 600px or less, set the css property
 @media screen and (max-width: 600px) {
 
@@ -477,6 +513,7 @@
     line-height: 18px;
 }
 .title-lg{
+    height: 30px;
     font-size: 18px;
     letter-spacing: 1px;
 }
@@ -501,6 +538,32 @@
     margin-top: 20px;
     width: 300px;
     height: 50px;
+    padding: 15px 15px;
+}
+.btn-arrow{
+    left: 5px;
+}
+.gallery-image{
+    height: 450px;
+    background-size: 100% 100%;
+}
+.text-box-gradient{
+    height: 16vh;
+    top: 46vh;
+}
+.faq-box-padding{
+    padding: 0vh 4vh;
+}
+.faq-heading{
+    font-size: 20px;
+    line-height: 110%;
+}
+.faq-text{
+    font-size: 20px;
+    line-height: 110%;
+}
+::ng-deep .mat-expansion-panel-body {
+    padding: 0px !important;
 }
 .flex-2{
     padding: 1vh 1vh 1vh 4vh;
@@ -608,7 +671,7 @@
 .title-container{
     margin-top: 4.5vh;
     width: 86%;
-    padding: 15px 0px;
+    padding: 10px 0px;
 }
 }
 // =========================================End media 600==================================================
